[notebooks] fl-diabetes-prediction notebooks using GDrive transport

--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/do2.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "0",
-   "metadata": {},
+   "metadata": {
+    "id": "0"
+   },
    "source": [
     "## Prerequisites\n",
     "\n",
@@ -15,31 +17,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "id": "1"
+   },
    "outputs": [],
    "source": [
-    "!uv pip install -q syft-flwr  # should have syft-client installed as dependency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import syft_client\n",
-    "from syft_client import login_do\n",
-    "\n",
-    "syft_client.__version__"
+    "!uv pip install -q \"git+https://github.com/OpenMined/syft-flwr.git@main\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
+   "id": "2",
+   "metadata": {
+    "id": "NG-0R5VxFzvs"
+   },
    "source": [
     "## Login to Datasite"
    ]
@@ -47,27 +38,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
-   "metadata": {},
+   "id": "3",
+   "metadata": {
+    "id": "4"
+   },
    "outputs": [],
    "source": [
+    "import syft_client as sc\n",
+    "\n",
+    "import syft_flwr\n",
+    "\n",
+    "print(f\"{sc.__version__ = }\")\n",
+    "print(f\"{syft_flwr.__version__ = }\")\n",
+    "\n",
     "do_email = input(\"Enter the Data Owner's email: \")\n",
-    "do_client = login_do(email=do_email)"
+    "do_client = sc.login_do(email=do_email)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
+   "id": "4",
+   "metadata": {
+    "id": "5"
+   },
    "source": [
-    "## Peers"
+    "## Peers\n",
+    "\n",
+    "First, the DS needs to add DO2 add a peer (see DS notebook)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
-   "metadata": {},
+   "id": "5",
+   "metadata": {
+    "id": "6"
+   },
    "outputs": [],
    "source": [
     "# should print out the DS peer\n",
@@ -76,21 +82,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
+   "id": "6",
+   "metadata": {
+    "id": "7"
+   },
    "source": [
-    "## Dataset"
+    "## Dataset\n",
+    "\n",
+    "**Note: Please added this DO as peer on the DS side before uploading the dataset. If not, the DS will not be able to discover the dataset (it's a bug for now)**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
-   "metadata": {},
+   "id": "7",
+   "metadata": {
+    "id": "8"
+   },
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "from huggingface_hub import snapshot_download\n",
     "\n",
+    "# download the dataset from huggingface\n",
     "DATASET_DIR = Path(\"./dataset/\").expanduser().absolute()\n",
     "\n",
     "if not DATASET_DIR.exists():\n",
@@ -100,18 +115,11 @@
     "        local_dir=DATASET_DIR,\n",
     "    )\n",
     "\n",
+    "\n",
+    "# create a syft dataset (with mock and private path)\n",
     "partition_number = 1\n",
     "DATASET_PATH = DATASET_DIR / f\"pima-indians-diabetes-database-{partition_number}\"\n",
-    "DATASET_PATH"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "do_client.create_dataset(\n",
     "    name=\"pima-indians-diabetes-database\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
@@ -120,31 +128,27 @@
     "    readme_path=DATASET_PATH / \"README.md\",\n",
     "    tags=[\"sales\"],\n",
     "    sync=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "do_client.datasets.get_all()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
-   "metadata": {},
+   "id": "8",
+   "metadata": {
+    "id": "11"
+   },
    "source": [
     "## Jobs"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
-   "metadata": {},
+   "id": "9",
+   "metadata": {
+    "id": "12"
+   },
    "source": [
     "Check for submitted jobs"
    ]
@@ -152,8 +156,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10",
+   "metadata": {
+    "id": "13"
+   },
+   "outputs": [],
+   "source": [
+    "do_client.jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {
+    "id": "14"
+   },
+   "source": [
+    "Approve submitted jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {
+    "id": "15"
+   },
+   "outputs": [],
+   "source": [
+    "do_client.jobs[0].approve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "13",
-   "metadata": {},
+   "metadata": {
+    "id": "Io_gWQyqiBw0"
+   },
    "outputs": [],
    "source": [
     "do_client.jobs"
@@ -162,25 +202,9 @@
   {
    "cell_type": "markdown",
    "id": "14",
-   "metadata": {},
-   "source": [
-    "Approve submitted jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_client.jobs[0].approve()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16",
-   "metadata": {},
+   "metadata": {
+    "id": "16"
+   },
    "source": [
     "Run submitted jobs"
    ]
@@ -188,8 +212,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
-   "metadata": {},
+   "id": "15",
+   "metadata": {
+    "id": "17"
+   },
    "outputs": [],
    "source": [
     "do_client.process_approved_jobs()"
@@ -197,8 +223,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
-   "metadata": {},
+   "id": "16",
+   "metadata": {
+    "id": "18"
+   },
    "source": [
     "Check jobs status"
    ]
@@ -206,15 +234,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
-   "metadata": {},
+   "id": "17",
+   "metadata": {
+    "id": "19"
+   },
    "outputs": [],
    "source": [
     "do_client.jobs"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "## Clean Up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
+   "metadata": {
+    "id": "Vq8hPJa5FHB4"
+   },
+   "outputs": [],
+   "source": [
+    "do_client.delete_syftbox()"
+   ]
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "syft-flwr",
    "language": "python",
