--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/ds.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "0",
-   "metadata": {},
+   "metadata": {
+    "id": "0"
+   },
    "source": [
     "## Prerequisites\n",
     "\n",
@@ -15,28 +17,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "id": "LnMaQvu_0P7x"
+   },
    "outputs": [],
    "source": [
-    "!uv pip install -q syft-flwr  # should have syft-client installed as dependency"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import syft_client as sc\n",
-    "\n",
-    "sc.__version__"
+    "!uv pip install -q \"git+https://github.com/OpenMined/syft-flwr.git@main\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
+   "id": "2",
+   "metadata": {
+    "id": "3"
+   },
    "source": [
     "## Login"
    ]
@@ -44,18 +38,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
-   "metadata": {},
+   "id": "3",
+   "metadata": {
+    "id": "4"
+   },
    "outputs": [],
    "source": [
+    "import syft_client as sc\n",
+    "\n",
+    "import syft_flwr\n",
+    "\n",
+    "print(f\"{sc.__version__ = }\")\n",
+    "print(f\"{syft_flwr.__version__ = }\")\n",
+    "\n",
     "ds_email = input(\"Enter the Data Scientist's email: \")\n",
     "ds_client = sc.login_ds(email=ds_email)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5",
-   "metadata": {},
+   "id": "4",
+   "metadata": {
+    "id": "5"
+   },
    "source": [
     "## Peer Addition"
    ]
@@ -63,26 +68,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.peers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7",
-   "metadata": {},
-   "source": [
-    "Add first DO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
+   "id": "5",
+   "metadata": {
+    "id": "8"
+   },
    "outputs": [],
    "source": [
     "do1_email = input(\"Enter the First Data Owner's email: \")\n",
@@ -92,73 +81,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.peers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10",
-   "metadata": {},
-   "source": [
-    "Add second DO"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "do2_email = input(\"Enter the Second Data Owner's email: \")\n",
-    "ds_client.add_peer(do2_email)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ds_client.add_peer(do2_email)\n",
+    "\n",
     "ds_client.peers"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "13",
-   "metadata": {},
-   "source": [
-    "Make a list of DO emails"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do_emails = [peer.email for peer in ds_client.peers]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15",
-   "metadata": {},
+   "id": "7",
+   "metadata": {
+    "id": "15"
+   },
    "source": [
     "## Explore Datasets"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {
+    "id": "YE9xEJe9BGFM"
+   },
+   "source": [
+    "DO1's datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
-   "metadata": {},
+   "id": "9",
+   "metadata": {
+    "id": "16"
+   },
    "outputs": [],
    "source": [
     "do1_datasets = ds_client.datasets.get_all(datasite=do1_email)\n",
@@ -166,18 +125,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "17",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {
+    "id": "DyIsVYY9h8LK"
+   },
+   "outputs": [],
    "source": [
     "do1_datasets[0].describe()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11",
+   "metadata": {
+    "id": "XP6XiUeeBHdJ"
+   },
+   "source": [
+    "DO2's datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
-   "metadata": {},
+   "id": "12",
+   "metadata": {
+    "id": "18"
+   },
    "outputs": [],
    "source": [
     "do2_datasets = ds_client.datasets.get_all(datasite=do2_email)\n",
@@ -187,8 +162,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
-   "metadata": {},
+   "id": "13",
+   "metadata": {
+    "id": "19"
+   },
    "outputs": [],
    "source": [
     "do2_datasets[0].describe()"
@@ -196,8 +173,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
-   "metadata": {},
+   "id": "14",
+   "metadata": {
+    "id": "20"
+   },
    "source": [
     "Append the mock paths to the list of mock datasets (needed to run simulation locally)"
    ]
@@ -205,8 +184,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
-   "metadata": {},
+   "id": "15",
+   "metadata": {
+    "id": "21"
+   },
    "outputs": [],
    "source": [
     "mock_dataset_urls = [do1_datasets[0].mock_url, do2_datasets[0].mock_url]\n",
@@ -215,61 +196,95 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
-   "metadata": {},
+   "id": "16",
+   "metadata": {
+    "id": "22"
+   },
    "source": [
     "## Propose FL Project"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17",
+   "metadata": {
+    "id": "adRFan3eFdTY"
+   },
+   "source": [
+    "Clone the project from github"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
-   "metadata": {},
+   "id": "18",
+   "metadata": {
+    "id": "d_a_7Jtlijla"
+   },
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "SYFT_FLWR_PROJECT_PATH = Path(\"../fl-diabetes-prediction\")\n",
-    "print(f\"FL project path: {SYFT_FLWR_PROJECT_PATH}\")\n",
-    "print(f\"Project exists: {SYFT_FLWR_PROJECT_PATH.exists()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from loguru import logger\n",
+    "!mkdir -p /content/fl-diabetes-prediction\n",
+    "!curl -sL https://github.com/khoaguin/fl-diabetes-prediction/archive/refs/heads/main.tar.gz | tar -xz --strip-components=1 -C /content/fl-diabetes-prediction\n",
     "\n",
-    "import syft_flwr\n",
+    "SYFT_FLWR_PROJECT_PATH = Path(\"/content/fl-diabetes-prediction\")\n",
     "\n",
-    "try:\n",
-    "    !rm -rf {SYFT_FLWR_PROJECT_PATH / \"main.py\"}\n",
-    "    logger.info(f\"syft_flwr version = {syft_flwr.__version__}\")\n",
-    "    syft_flwr.bootstrap(\n",
-    "        SYFT_FLWR_PROJECT_PATH, aggregator=ds_email, datasites=do_emails\n",
-    "    )\n",
-    "    logger.info(\"Bootstrapped project successfully ✅\")\n",
-    "except Exception as e:\n",
-    "    logger.error(e)"
+    "print(f\"syft-flwr project at: {SYFT_FLWR_PROJECT_PATH}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25",
-   "metadata": {},
+   "id": "19",
+   "metadata": {
+    "id": "i4lUmQXAFfTo"
+   },
    "source": [
-    "## Run the FL Project in Simulation Mode (Optional)"
+    "Bootstrap the `syft-flwr` project"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
-   "metadata": {},
+   "id": "20",
+   "metadata": {
+    "id": "24"
+   },
+   "outputs": [],
+   "source": [
+    "import syft_flwr\n",
+    "\n",
+    "try:\n",
+    "    !rm -rf {SYFT_FLWR_PROJECT_PATH / \"main.py\"}\n",
+    "    print(f\"syft_flwr version = {syft_flwr.__version__}\")\n",
+    "    do_emails = [peer.email for peer in ds_client.peers]\n",
+    "    syft_flwr.bootstrap(\n",
+    "        SYFT_FLWR_PROJECT_PATH, aggregator=ds_email, datasites=do_emails\n",
+    "    )\n",
+    "    print(\"Bootstrapped project successfully ✅\")\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21",
+   "metadata": {
+    "id": "25"
+   },
+   "source": [
+    "## Run the FL Project in Simulation Mode (Optional)\n",
+    "\n",
+    "This will run the `fl_diabetes_prediction` on mock data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {
+    "id": "26"
+   },
    "outputs": [],
    "source": [
     "RUN_SIMULATION = False"
@@ -278,8 +293,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
-   "metadata": {},
+   "id": "23",
+   "metadata": {
+    "id": "27"
+   },
    "outputs": [],
    "source": [
     "# clean up\n",
@@ -293,8 +310,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
-   "metadata": {},
+   "id": "24",
+   "metadata": {
+    "id": "28"
+   },
    "source": [
     "## Submit FL Project to DOs"
    ]
@@ -302,31 +321,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
-   "metadata": {},
+   "id": "25",
+   "metadata": {
+    "id": "29"
+   },
    "outputs": [],
    "source": [
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fl_diabetes_prediction\" / \"__pycache__\"}  # clean before submitting\n",
+    "\n",
+    "job_name = \"fl-diabetes-training\"\n",
+    "\n",
     "ds_client.submit_python_job(\n",
     "    user=do1_email,\n",
-    "    code_path=SYFT_FLWR_PROJECT_PATH,  # Folder submission is currently disabled\n",
+    "    code_path=str(SYFT_FLWR_PROJECT_PATH),\n",
+    "    job_name=job_name,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
-   "metadata": {},
+   "id": "26",
+   "metadata": {
+    "id": "30"
+   },
    "outputs": [],
    "source": [
-    "ds_client.submit_python_job(user=do2_email, code_path=SYFT_FLWR_PROJECT_PATH)"
+    "ds_client.submit_python_job(\n",
+    "    user=do2_email,\n",
+    "    code_path=str(SYFT_FLWR_PROJECT_PATH),\n",
+    "    job_name=job_name,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {
+    "id": "31"
+   },
+   "outputs": [],
+   "source": [
+    "ds_client.jobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28",
+   "metadata": {
+    "id": "AhP7vWJs_vCR"
+   },
+   "source": [
+    "## Temp Fix: DS installs packages and runs `main.py` directly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29",
+   "metadata": {
+    "id": "JyInjbVp_ye6"
+   },
+   "outputs": [],
+   "source": [
+    "!uv pip install \\\n",
+    "    \"flwr-datasets>=0.5.0\" \\\n",
+    "    \"imblearn>=0.0\" \\\n",
+    "    \"loguru>=0.7.3\" \\\n",
+    "    \"pandas>=2.3.0\" \\\n",
+    "    \"ipywidgets>=8.1.7\" \\\n",
+    "    \"scikit-learn==1.7.1\" \\\n",
+    "    \"torch>=2.8.0\" \\\n",
+    "    \"ray==2.31.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {
+    "id": "KxOOWlwm_3MB"
+   },
+   "outputs": [],
+   "source": [
+    "assert (\n",
+    "    SYFT_FLWR_PROJECT_PATH.exists()\n",
+    "), f\"Project path does not exist: {SYFT_FLWR_PROJECT_PATH}\"\n",
+    "assert (\n",
+    "    SYFT_FLWR_PROJECT_PATH / \"main.py\"\n",
+    ").exists(), f\"main.py not found in project path: {SYFT_FLWR_PROJECT_PATH / 'main.py'}\"\n",
+    "\n",
+    "ds_email = ds_client.email\n",
+    "syftbox_folder = f\"/content/SyftBox_{ds_email}\"\n",
+    "!SYFTBOX_EMAIL=\"{ds_email}\" SYFTBOX_FOLDER=\"{syftbox_folder}\" \\\n",
+    "    uv run {str(SYFT_FLWR_PROJECT_PATH / \"main.py\")}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "31",
-   "metadata": {},
+   "metadata": {
+    "id": "nyEPMlqjnYXW"
+   },
    "outputs": [],
    "source": [
     "ds_client.jobs"
@@ -335,78 +433,33 @@
   {
    "cell_type": "markdown",
    "id": "32",
-   "metadata": {},
+   "metadata": {
+    "id": "6dN8suJtnttZ"
+   },
    "source": [
-    "## DS submits code to itself"
+    "## Clean Up"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "33",
-   "metadata": {},
+   "metadata": {
+    "id": "8Im5H8RPnuiz"
+   },
    "outputs": [],
    "source": [
-    "job = ds_client.job.submit(\n",
-    "    name=\"fl-diabetes-prediction-ds-new\",\n",
-    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
-    "    entrypoint=\"main.py\",\n",
-    ")\n",
-    "job"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.job.get_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.jobs[0].approve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.job.get_all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.process_approved_jobs()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_client.jobs"
+    "ds_client.delete_syftbox()"
    ]
   }
  ],
  "metadata": {
+  "colab": {
+   "collapsed_sections": [
+    "25"
+   ],
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "syft-flwr",
    "language": "python",
