fix tags and summary in creating datasets

--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/do1.ipynb
@@ -130,9 +130,9 @@
     "    name=\"pima-indians-diabetes-database\",\n",
     "    mock_path=DATASET_PATH / \"mock\",\n",
     "    private_path=DATASET_PATH / \"private\",\n",
-    "    summary=\"This is a summary\",\n",
+    "    summary=\"This is a partition of the pima-indians-diabetes-database\",\n",
     "    readme_path=DATASET_PATH / \"README.md\",\n",
-    "    tags=[\"sales\"],\n",
+    "    tags=[\"diabetes, health, medicine\"],\n",
     "    sync=True,\n",
     ")\n",
     "\n",
