--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/do1.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/do1.ipynb
@@ -87,8 +87,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client.approve_peer_request(do_client.peers[0].email)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8",
    "metadata": {
     "id": "7"
    },
@@ -101,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {
     "id": "8"
    },
@@ -141,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {
     "id": "11"
    },
@@ -151,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "11",
    "metadata": {
     "id": "12"
    },
@@ -162,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {
     "id": "13"
    },
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {
     "id": "14"
    },
@@ -184,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {
     "id": "15"
    },
@@ -196,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {
     "id": "Io_gWQyqiBw0"
    },
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {
     "id": "16"
    },
@@ -218,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {
     "id": "17"
    },
@@ -229,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {
     "id": "18"
    },
@@ -240,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {
     "id": "19"
    },
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "## Clean up"
@@ -260,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {
     "id": "Vq8hPJa5FHB4"
    },
