--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/do2.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/do2.ipynb
@@ -81,8 +81,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client.approve_peer_request(do_client.peers[0].email)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
    "metadata": {
     "id": "7"
    },
@@ -95,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "id": "8"
    },
@@ -135,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {
     "id": "11"
    },
@@ -145,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {
     "id": "12"
    },
@@ -156,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {
     "id": "13"
    },
@@ -167,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {
     "id": "14"
    },
@@ -178,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {
     "id": "15"
    },
@@ -190,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {
     "id": "Io_gWQyqiBw0"
    },
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {
     "id": "16"
    },
@@ -212,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {
     "id": "17"
    },
@@ -223,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {
     "id": "18"
    },
@@ -234,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {
     "id": "19"
    },
@@ -245,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "source": [
     "## Clean Up"
@@ -254,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "20",
    "metadata": {
     "id": "Vq8hPJa5FHB4"
    },
