--- a/notebooks/fl-diabetes-prediction/distributed-gdrive/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/distributed-gdrive/ds.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "!uv pip install -q \"git+https://github.com/OpenMined/syft-flwr.git@main\""
+    "!uv pip install -q syft-flwr"
    ]
   },
   {
